[package]
name = "eigenvalues"
version = "0.4.0"
authors = ["felipe <tifonzafel@gmail.com>"]
description = "algorithms to compute eigenvalue/eigenvectors of symmetric matrices"
readme = "README.md"
repository = "https://github.com/felipeZ/eigenvalues"
categories = [ "science" ]
keywords = [ "linear-algebra", "eigenvalues" ]
license = "Apache-2.0"
edition = "2018"

[dependencies]
approx = "0.4"
nalgebra = { version = "0.26"}
ndarray-linalg = { version = "0.12.1", features = ["intel-mkl"]}
ndarray = {version = "0.13", features = ["serde-1", "approx", "rayon"]}
ndarray-rand = "0.14.0"

[lib]
name = "eigenvalues"
path = "src/lib.rs"
