[package]
name = "eigenvalues"
version = "0.4.0"
authors = ["felipe <tifonzafel@gmail.com>"]
description = "algorithms to compute eigenvalue/eigenvectors of symmetric matrices"
readme = "README.md"
repository = "https://github.com/felipeZ/eigenvalues"
categories = [ "science" ]
keywords = [ "linear-algebra", "eigenvalues" ]
license = "Apache-2.0"
edition = "2018"

[dependencies]
approx = "0.4"
ndarray-linalg = { version = "0.14", features = ["netlib-system"]}
ndarray = {version = "0.15.2", features = ["serde-1", "approx", "rayon"]}
rand = "0.8.4"
rawpointer = "0.2.1"
log = "0.4.0"
env_logger = "0.8.3"
ndarray-stats = "0.5"

[lib]
name = "eigenvalues"
path = "src/lib.rs"
